--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@ xmlns="http://www.w3.org/2000/svg">
                 <a href="index.html">"Home Page"</a>
             </li>
             <li>
-                <a href="two.html">"Page Two"</a>
+                <a href="views/two.html">"Page Two"</a>
             </li>
             <li>
-                <a href="three.html">"Page Three</a>
+                 <a href="views/three.html">"Page Three</a>
             </li>
         </ul>
     </nav>
