--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ xmlns="http://www.w3.org/2000/svg">
    </text>
    <rect width="25%" height="50%" x="70%" y="70" fill="black"/>
    <text x="70%"y="100" fill="white" font-family="timesnewroman" >All the information provided are reviewed </text>
-   <text x="70%"y="120" fill="white" font-family="timesnewroman"> and appropriate for the students</text>
+  <text x="70%"y="120" fill="white" font-family="timesnewroman">to view my website based on the Assignment 05</text>
+   <text x="70%"y="140" fill="white" font-family="timesnewroman"> which reflects the concepts of HTML, CSS and Java Script</text>
    <g>
     <path fill-opacity="0.1" stroke="lightgray" d="
         M 50, 220
